# Oz_codingSchool

./: .dockerignore  .gitattributes  .gitignore  ai_health.db  docker-compose.yml  pyproject.toml  test2.txt  test_kjh.text
alembic/: env.py
alembic/versions/: 021f0b7ed848_create_ai_analysis_table.py  11abd37a7ee7_create_initial_tables.py  25dfa0c0d6f9_set_xray_uploader_null_on_user_delete.py  31f139297e98_create_users_table.py  36a3463d89e0_add_role_column_to_user.py  4bbe9a74d096_auto_migration.py  67ce7c5af502_create_patients_table.py  6f2e4b7a9c10_cascade_patient_related_data.py  718b7bc51337_create_xray_images_table.py  9c100473a68a_add_heatmap_model_and_prediction_.py  bb4ed704adb3_auto_migration.py  bf264bb97c61_add_medical_record_relationships.py  e7cf78a91706_auto_migration.py
app/: Dockerfile  main.py
app/apis/: analysis_apis.py  auth_apis.py  login_apis.py  mypage_apis.py  patient_apis.py  practice_apis.py  prediction_apis.py  record_api.py  user_apis.py
app/core/: authorization.py  config.py  decorators.py  performance.py  security.py  timeout.py
app/models/: __init__.py  ai_analysis_results.py  medical_records.py  patients.py  users.py  xray_images.py
app/schemas/: auth.py  (+6 more)
docs/: 1일차_team_rules.md  2일차_branch_전략.md  3일차_db_migration.md  3일차_프로젝트_뜯어보기.md  4일차_USER_API_설계.md  5일차_환자관리_API_설계.md  6일차_폐렴예측_API_설계.md  7일차_앱_실행화면.md  9일차_동시성문제_해결을위한_아키텍처설계.md  NFR-USER-003_성능_테스트_결과.md  docker_stage1.md
reports/: model_evaluation.md
static/: apis.js  app.js  index.html  pages.js  styles.css  utils.js
worker/: evaluate.py  model.py  smoke_test.py
(+51 files in other folders)
