[project]
name = "ai-health-web-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncmy>=0.2.11",
    "cryptography>=46.0.6",
    "fastapi[standard]>=0.135.3",
    "numpy>=2.2.0",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.1.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.13.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "locust>=2.45.0",
]
